--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -38,9 +38,8 @@
     box-sizing:border-box;
     padding:0;
     margin:0;
-    transition: transform .3s cubic-bezier(0.4, 0, 0, 1),
-                opacity 0.3s ease,
-                border-color 0.3s ease;
+    transition: transform .3s cubic-bezier(0.4, 0, 0 .2, 1),
+                color 0.3s ease;
     /* outline: 2px solid lime; */ /*=============== UNCOMMENT FOR OVERFLOW DEBUGGING ===============*/
 }
 
@@ -54,23 +53,27 @@ body{
 
 h1{
     font-size:var(--font-h1);
-    letter-spacing:.175px;
     font-weight:var(--font-bold);
+    letter-spacing:.175px;
+    line-height:1.1;
 }
 
 h2{
     font-size:var(--font-h2);
     letter-spacing:.15px;
     font-weight:var(--font-semibold);
+    line-height:1.275;
 }
 
 h3{
     font-size:var(--font-h3);
     font-weight:var(--font-bold);
+    line-height:1.35;
 }
 
 p{
     font-weight:var(--font-normal);
+    line-height:1.5;
 }
 
 a{
